force-app/main/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Account_Approval_Status__c</fullName>
        <formula>TEXT(Account.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_LBU__c</fullName>
        <formula>RIGHT(TEXT( Account.BU__c ), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account LBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>This field displays Account Number of Account linked to</description>
        <formula>Account.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory_Region__c</fullName>
        <description>Field created to get territory Region</description>
        <formula>IF(
    CONTAINS(TEXT(Account.Territory__r.Region__c), &quot;-&quot;),
    TRIM(
        LEFT(
            TEXT(Account.Territory__r.Region__c),
            FIND(&quot;-&quot;, TEXT(Account.Territory__r.Region__c)) - 1
        )
    ),
    TEXT(Account.Territory__r.Region__c)
)</formula>
        <label>Account Territory : Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Contract_Duration__c</fullName>
        <label>Actual Contract Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Record_Type_Name__c</fullName>
        <label>Actual Record Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configurator Opportunity</fullName>
                </value>
                <value>
                    <fullName>GCSC Opportunity</fullName>
                </value>
                <value>
                    <fullName>Standard Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To create a checkbox &quot;Allow Closed?&quot;field so as to check if status is chenged to Closed/Won manually or by functionality(trigger).</description>
        <label>Allow Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value__c</fullName>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apply_Price_Increase_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Price Increase Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_Risk_Reason__c</fullName>
        <label>At Risk Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Forecast_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal Value</fullName>
                </value>
                <value>
                    <fullName>Verbal Cancellation</fullName>
                </value>
                <value>
                    <fullName>Written Cancellation</fullName>
                </value>
                <value>
                    <fullName>Bad Debt</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Close_Date__c</fullName>
        <label>Auto Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Created_Renewal__c</fullName>
        <formula>Renewal_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Renewal Opportunity has been auto-created by SFDC as the Original Opportunity was a multi year deal</inlineHelpText>
        <label>Auto-Created Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutomationBypassDateTime__c</fullName>
        <label>AutomationBypassDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Billing Contact should be part of the account linked to the opportunity.</errorMessage>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Choose the Opportunity Type that best describes the type of business pursued.  
Reboost should only be used with In-Advance clients. 
Cross-sell is simply New Business with a client that has a current commercial relationship.</description>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Debooking</fullName>
                    <label>Debooking / Adjustment</label>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>In Arrears</fullName>
                </value>
                <value>
                    <fullName>In Advance</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Professional Services: non-subscription</fullName>
                </value>
                <value>
                    <fullName>Top Up / Addition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Contract_Status__c</fullName>
        <label>CLM Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for OATS</fullName>
                </value>
                <value>
                    <fullName>Waiting for Sales Feedback</fullName>
                </value>
                <value>
                    <fullName>Waiting for External Review to Complete</fullName>
                </value>
                <value>
                    <fullName>Preparing for Signatures</fullName>
                </value>
                <value>
                    <fullName>Sent for Signatures</fullName>
                </value>
                <value>
                    <fullName>Not Activated (Help Required)</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Duplicate Flow - Killed</fullName>
                </value>
                <value>
                    <fullName>Duplicate Flow Killed – Closed/Lost</fullName>
                </value>
                <value>
                    <fullName>Query raised to Sales</fullName>
                </value>
                <value>
                    <fullName>Auto-Activated by Salesforce</fullName>
                </value>
                <value>
                    <fullName>Waiting for Requester to Review Contract</fullName>
                </value>
                <value>
                    <fullName>Waiting for Metadata Review</fullName>
                </value>
                <value>
                    <fullName>Waiting for Start Date</fullName>
                </value>
                <value>
                    <fullName>CLM process Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Line_Information__c</fullName>
        <description>This fields holds the information about opportunity lines like if it includes products or services etc.</description>
        <label>CLM Line Information</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Includes Product</fullName>
                </value>
                <value>
                    <fullName>Includes Service</fullName>
                </value>
                <value>
                    <fullName>Includes In Arrears</fullName>
                </value>
                <value>
                    <fullName>Includes In Advance</fullName>
                </value>
                <value>
                    <fullName>SOW Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_be_Auto_renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is populated by the associated contract information linked to the original opportunity</inlineHelpText>
        <label>Can be Auto-renewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notice_Received__c</fullName>
        <label>Cancellation Notice Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Rescind_Notice_Received__c</fullName>
        <label>Cancellation Rescind Notice Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Central_PS_Attributed_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Central PS Attributed to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Challenger_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Challenger opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Currency?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Business_Function__c</fullName>
        <inlineHelpText>Select the client business function(s) where the talent level sits.</inlineHelpText>
        <label>Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT / Technology</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Customer Service / Call Center</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Procurement &amp; Ops</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Corporate Office</fullName>
                </value>
                <value>
                    <fullName>Enterprise Wide</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Store Front</fullName>
                </value>
                <value>
                    <fullName>Logistics &amp; warehouse</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason_Additional_Details__c</fullName>
        <label>Closed Won/Lost Reason Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Won/Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Limitations</fullName>
                </value>
                <value>
                    <fullName>Contact Turnover</fullName>
                </value>
                <value>
                    <fullName>Incorrect Contact</fullName>
                </value>
                <value>
                    <fullName>M&amp;A Activity</fullName>
                </value>
                <value>
                    <fullName>Value Concerns</fullName>
                </value>
                <value>
                    <fullName>Finance Drop</fullName>
                </value>
                <value>
                    <fullName>Duplicate Opportunity</fullName>
                </value>
                <value>
                    <fullName>Invalid/market definitions</fullName>
                </value>
                <value>
                    <fullName>Cannot meet requirements</fullName>
                </value>
                <value>
                    <fullName>Cannot meet timescales</fullName>
                </value>
                <value>
                    <fullName>Qualified Out</fullName>
                </value>
                <value>
                    <fullName>Opportunity clean up</fullName>
                </value>
                <value>
                    <fullName>Expertise</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Commercials</fullName>
                </value>
                <value>
                    <fullName>Service Failure</fullName>
                </value>
                <value>
                    <fullName>Debooking</fullName>
                </value>
                <value>
                    <fullName>RFP - SHL Qualified Out</fullName>
                </value>
                <value>
                    <fullName>Account Management / Client Relationship</fullName>
                </value>
                <value>
                    <fullName>Duplicate / Data clean</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer Restructure</fullName>
                </value>
                <value>
                    <fullName>Customer No Interest   - Other</fullName>
                </value>
                <value>
                    <fullName>Customer Requirements</fullName>
                </value>
                <value>
                    <fullName>Customer Budget Limitations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Contract Extension Requested</fullName>
                </value>
                <value>
                    <fullName>Sanctioned Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Won_Lost_Reason_Sub_Type__c</fullName>
        <label>Closed Won/Lost Sub Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Closed_Lost_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capability</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>ROI realized</fullName>
                </value>
                <value>
                    <fullName>Timescales</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Payment Terms</fullName>
                </value>
                <value>
                    <fullName>GDPR</fullName>
                </value>
                <value>
                    <fullName>Reason</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Created in error</fullName>
                </value>
                <value>
                    <fullName>M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Contact Churn</fullName>
                </value>
                <value>
                    <fullName>New contact</fullName>
                </value>
                <value>
                    <fullName>Dept Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_winner__c</fullName>
        <inlineHelpText>These field needs to be filled out when an Opportunity is lost to a Competitor.</inlineHelpText>
        <label>Competitor winner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;DC</fullName>
                </value>
                <value>
                    <fullName>Aon</fullName>
                </value>
                <value>
                    <fullName>APT</fullName>
                </value>
                <value>
                    <fullName>Assess-Systems</fullName>
                </value>
                <value>
                    <fullName>Axiometrics</fullName>
                </value>
                <value>
                    <fullName>Batrus Hollweg International (BHI)</fullName>
                </value>
                <value>
                    <fullName>BayState</fullName>
                </value>
                <value>
                    <fullName>Bernard Hodes</fullName>
                </value>
                <value>
                    <fullName>Caliper</fullName>
                </value>
                <value>
                    <fullName>Censeo</fullName>
                </value>
                <value>
                    <fullName>Chandler MacLeod</fullName>
                </value>
                <value>
                    <fullName>Corvirtus</fullName>
                </value>
                <value>
                    <fullName>CPP</fullName>
                </value>
                <value>
                    <fullName>Criteria Corp</fullName>
                </value>
                <value>
                    <fullName>DDI</fullName>
                </value>
                <value>
                    <fullName>Emergentics</fullName>
                </value>
                <value>
                    <fullName>Employtest</fullName>
                </value>
                <value>
                    <fullName>eSkills</fullName>
                </value>
                <value>
                    <fullName>ETC</fullName>
                </value>
                <value>
                    <fullName>Evolv OnDemand</fullName>
                </value>
                <value>
                    <fullName>FindingPotential</fullName>
                </value>
                <value>
                    <fullName>FirstAdvantage</fullName>
                </value>
                <value>
                    <fullName>FurstPerson</fullName>
                </value>
                <value>
                    <fullName>Gallup</fullName>
                </value>
                <value>
                    <fullName>Gartner</fullName>
                </value>
                <value>
                    <fullName>Gettinghired.com</fullName>
                </value>
                <value>
                    <fullName>Hogan</fullName>
                </value>
                <value>
                    <fullName>Hudson</fullName>
                </value>
                <value>
                    <fullName>Inscape</fullName>
                </value>
                <value>
                    <fullName>Internal Resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Groups__c</fullName>
        <label>Content Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC Safety Series</fullName>
                </value>
                <value>
                    <fullName>Accounting and Finance</fullName>
                </value>
                <value>
                    <fullName>Admin-Clerical</fullName>
                </value>
                <value>
                    <fullName>Aptitude</fullName>
                </value>
                <value>
                    <fullName>Assessment Series</fullName>
                </value>
                <value>
                    <fullName>BBIT</fullName>
                </value>
                <value>
                    <fullName>Beavioral</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Business Skills</fullName>
                </value>
                <value>
                    <fullName>CAB</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Call Center Scenario</fullName>
                </value>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>Customer Service Attitude</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Entry-Level Solutions</fullName>
                </value>
                <value>
                    <fullName>Executive Solutions</fullName>
                </value>
                <value>
                    <fullName>Global Cognitive Index</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Healthcare Suite</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Indutrial</fullName>
                </value>
                <value>
                    <fullName>Informaiton Technology</fullName>
                </value>
                <value>
                    <fullName>Intermediate Solutions</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Job Performance &amp; Fit</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Manager Solutions</fullName>
                </value>
                <value>
                    <fullName>Multimedia &amp; Web Design</fullName>
                </value>
                <value>
                    <fullName>Personality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Number_System_Use__c</fullName>
        <formula>Contract.ContractNumber</formula>
        <label>Contract Number(System Use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Border_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross Border Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Contract_Duration__c</fullName>
        <inlineHelpText>If standard contract duration is other, this field requires value (in months)</inlineHelpText>
        <label>Custom Contract Duration (In Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_left_to_Auto_Close__c</fullName>
        <description>Used to Calculate the number of days which are left to auto close an opportunity</description>
        <formula>Auto_Close_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days left to Auto Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_left_to_Close_Opp__c</fullName>
        <description>This field is used on back end to check number of days left to close the opportunity.</description>
        <formula>CloseDate  - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used on back end to check number of days left to close the opportunity.</inlineHelpText>
        <label>Days left to Close Opp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_remaining_from_annual_subscription__c</fullName>
        <label>Days remaining from annual subs (Legacy)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Status__c</fullName>
        <label>Discount Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicable for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Escalated Level 1</fullName>
                </value>
                <value>
                    <fullName>Escalated Level 2</fullName>
                </value>
                <value>
                    <fullName>Re-Approval Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Reason_Code__c</fullName>
        <label>Discount Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive Pressure</fullName>
                </value>
                <value>
                    <fullName>Strategic Deal</fullName>
                </value>
                <value>
                    <fullName>Customer Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Reason_Justification__c</fullName>
        <label>Discount Reason/Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EACV_Formula__c</fullName>
        <formula>EACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EACV Formula (Legacy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EACV__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;Configurator_Opportunity&apos;,IF(Total_Product_Count__c==0,Amount,  RAG_Indicator_Amber__c + RAG_Indicator_Green__c),Running_total_of_subscription_amount__c + Running_total_of_non_subscription_amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated Annual Contract Value – first year value where subscriptions are prorated to 1 year. For Ignite Opportunities this will equal Total Sales Price until Product and Assessment is uploaded.</inlineHelpText>
        <label>EACV (Legacy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date_Plus_Leap_Year__c</fullName>
        <label>Earliest Start Date Plus Leap Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date__c</fullName>
        <label>Earliest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Auto_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Auto-Close?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <inlineHelpText>Please select “Commit” if you want this opportunity to be counted in your Forecast number. Please select Pipeline or Renewal at Risk if you do not want it to be included.</inlineHelpText>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                    <default>true</default>
                    <label>Pipeline</label>
                </value>
                <value>
                    <fullName>Renewal at Risk</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                    <isActive>false</isActive>
                    <label>Forecast</label>
                </value>
                <value>
                    <fullName>Parked</fullName>
                    <isActive>false</isActive>
                    <label>Parked</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormalTender__c</fullName>
        <description>Earlier this field was a Checkbox. For SSE-22566 we are re-using this field and changed its data type to picklist
This field will be marked as &apos;Renewal Created&apos; on cloning PH Opportunity from Auto Closed Closed Lost Oppty and will be marked as &apos;Cloned&apos; for new cloned PH Oppty (System Used Only)</description>
        <label>Renewal Created/ Cloned?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloned</fullName>
                </value>
                <value>
                    <fullName>Renewal Created</fullName>
                </value>
                <value>
                    <fullName>Extension Created</fullName>
                </value>
                <value>
                    <fullName>Synced Variation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Product_Total_Price__c</fullName>
        <label>Future Product Total Price</label>
        <summarizedField>Future_Product__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Future_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GCSC__c</fullName>
        <label>GCSC Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Includes_Central_Professional_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Central Professional Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Managed_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Managed Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Multimedia_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Multimedia services include custom(bespoke) animation, video, and/or simulations.</inlineHelpText>
        <label>Includes Multimedia Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrated_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if an Integrated solution (e.g. with Taleo) is in some way part of this opportunity</inlineHelpText>
        <label>Integrated Solution?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>